--- a/style.css
+++ b/style.css
@@ -621,7 +621,7 @@ body {
 
 @media (min-width: 1024px) {
     .title {
-        font-size: 3rem; /* Equivalent to lg:text-5xl */
+        font-size: 3rem;
     }
 }
 
@@ -629,7 +629,6 @@ body {
     color: #0ef;
 }
 
-/* Projects Container */
 .projects-container {
     width: 90%;
     display: grid;
@@ -900,3 +899,57 @@ body {
     padding-top: 1rem;
   }
   
+  /* .hero-text, .hero-image-container {
+    opacity: 0;
+    position: relative;
+  } */
+
+  @keyframes slideInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.hero-text.animate-slide-left .text-line {
+    animation: slideInLeft 1s ease-out forwards;
+}
+
+.hero-text .text-line {
+    opacity: 0;
+}
+
+/* Apply Delays to Each Line */
+.hero-text .text-line:nth-child(1) {
+    animation-delay: 0.2s;
+}
+
+.hero-text .text-line:nth-child(2) {
+    animation-delay: 0.4s;
+}
+
+.hero-text .text-line:nth-child(3) {
+    animation-delay: 0.6s;
+}
+.hero-text .text-line:nth-child(4) {
+    animation-delay: 0.8s;
+}
+
+.hero-image-container.animate-slide-right {
+    animation: slideInRight 1s ease-out forwards;
+}
