--- a/style.css
+++ b/style.css
@@ -572,7 +572,21 @@ body {
     border-radius: 0.5rem;
     overflow: hidden;
     transition: transform 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    animation: get-in ease-in;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+}
+
+@keyframes get-in {
+  from{
+    opacity: 0;
+    clip-path: inset(100% 100% 50% 0)
+  }
+  to{
+    opacity: 1;
+    clip-path: inset(0 0 0 0);
+  }
 }
 
 .card:hover {
@@ -859,4 +873,70 @@ body {
 
 .hero-image-container.animate-slide-right {
     animation: slideInRight 1s ease-out forwards;
+}
+
+.bounce-in-top{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
+@keyframes appear {
+  from{
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  to{
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.fade {
+  animation: fade-in ease;
+  animation-timeline: view();
+  animation-range: entry 10% cover 50%;
+}
+
+@keyframes fade-in {
+  from{
+    opacity: 0;
+    scale: 0;
+  }
+  to{
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+.fade-out {
+  animation: fade-out ease-in-out;
+  animation-timeline: view();
+  animation-range: entry 15%;
+}
+
+@keyframes fade-out{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+.skill-card {
+  animation: pop ease-in-out;
+  animation-timeline: view();
+  animation-range: entry 10% cover 40%;
+}
+
+@keyframes pop{
+  from{
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  to{
+    transform: scale(1);
+    opacity: 1
+  }
 }
