--- a/style.css
+++ b/style.css
@@ -518,7 +518,6 @@ body {
   
 #projects {
     width: 100%;
-    max-width: 1200px;
     padding: 2rem 0;
     text-align: center;
 }
@@ -550,6 +549,7 @@ body {
     width: 90%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    place-items: center;
     gap: 1.5rem;
     margin: 2rem auto;
 }
@@ -581,11 +581,13 @@ body {
 @keyframes get-in {
   from{
     opacity: 0;
-    clip-path: inset(100% 100% 50% 0)
+    clip-path: inset(50% 50% 50% 50%);
+    transform: translateX(-100%)
   }
   to{
     opacity: 1;
     clip-path: inset(0 0 0 0);
+    transform: translateX(0%)
   }
 }
 
@@ -678,10 +680,17 @@ body {
   
  .testimonial-content {
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 1rem;
     cursor: pointer;
   } 
+
+  .upper{
+    display: flex;
+    gap: 6px;
+    align-items: center;
+  }
 
   .avatar {
     width: 80px;
@@ -812,8 +821,8 @@ body {
   }
   
   .icon {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     transition: transform 0.3s ease;
   }
   
@@ -912,7 +921,7 @@ body {
 .fade-out {
   animation: fade-out ease-in-out;
   animation-timeline: view();
-  animation-range: entry 15%;
+  animation-range: entry 0% cover 30%;
 }
 
 @keyframes fade-out{
